--- a/tour-portugal.html
+++ b/tour-portugal.html
@@ -15,12 +15,12 @@
 </head>
 
 <body>
-	<header class="header-excursions" style="background-image: url('../images/portugal/tour-portugal-header.jpg'); height: 670px; background-position: center; background-position: center;">
+	<header class="header-excursions" style="background-image: url('./images/portugal/tour-portugal-header.jpg'); height: 670px; background-position: center; background-position: center;">
 		<div class="container">
 			<div class="header__inner">
 				<div class="header__logo">
 					<a href="#" class="logo__link">
-						<img src="../images/header-logo.png" alt="">
+						<img src="./images/header-logo.png" alt="">
 					</a>
 				</div>
 				<div class="menu">
@@ -68,17 +68,17 @@
 				</div>
 				<div class="description__content-price">
 					<div class="description-price__grown"
-						style="background-image: url('../images/tour-price.png'); background-repeat: no-repeat;">
+						style="background-image: url('./images/tour-price.png'); background-repeat: no-repeat;">
 						<h4 class="description-price">400$</h4>
 						<p class="description-text__price">Взрослый билет</p>
 					</div>
 					<div class="description-price__small"
-						style="background-image: url('../images/tour-price.png'); width: 180px; background-repeat: no-repeat;">
+						style="background-image: url('./images/tour-price.png'); width: 180px; background-repeat: no-repeat;">
 						<h4 class="description-price">200$</h4>
 						<p class="description-text__price">Детский билет</p>
 					</div>
 					<div class="description-price__time"
-						style="background-image: url('../images/tours-time.png'); background-repeat: no-repeat;">
+						style="background-image: url('./images/tours-time.png'); background-repeat: no-repeat;">
 						<h4 class="description-time">2 дня</h4>
 					</div>
 				</div>
@@ -86,7 +86,7 @@
 		</div>
 	</section>
 	<section class="travel-calendar"
-		style="background-image: url('../images/portugal/tour-portugal-bg.jpg'); width: 825px; height:870px; border-radius: 0 10px 10px 0; background-size: cover;">
+		style="background-image: url('./images/portugal/tour-portugal-bg.jpg'); width: 825px; height:870px; border-radius: 0 10px 10px 0; background-size: cover;">
 		<div class="container">
 			<div class="travel-calendar__content">
 				<div class="travel-content__box">
@@ -165,23 +165,23 @@
 			<div class="tour-slider__box">
 				<div class="tour-slider">
 					<div class="tours-content"
-						style="background-image: url(../images/portugal/tours-portugal-slider.jpg); min-width: 420px; min-height: 570px; background-repeat: no-repeat; background-size: cover; background-position: center;">
+						style="background-image: url(./images/portugal/tours-portugal-slider.jpg); min-width: 420px; min-height: 570px; background-repeat: no-repeat; background-size: cover; background-position: center;">
 						<p class="tours-content__text">Санторини</p>
 					</div>
 					<div class="tours-content"
-						style="background-image: url(../images/portugal/tours-portugal-slider-1.jpg); min-width: 420px; min-height: 570px; background-repeat: no-repeat; background-size: cover; background-position: center;">
+						style="background-image: url(./images/portugal/tours-portugal-slider-1.jpg); min-width: 420px; min-height: 570px; background-repeat: no-repeat; background-size: cover; background-position: center;">
 						<p class="tours-content__text">Метеора</p>
 					</div>
 					<div class="tours-content"
-						style="background-image: url(../images/portugal/tours-portugal-slider-2.jpg); min-width: 420px; min-height: 570px; background-repeat: no-repeat; background-size: cover; background-position: center;">
+						style="background-image: url(./images/portugal/tours-portugal-slider-2.jpg); min-width: 420px; min-height: 570px; background-repeat: no-repeat; background-size: cover; background-position: center;">
 						<p class="tours-content__text">Бурдж-Халифа (г. Дубай)</p>
 					</div>
 					<div class="tours-content"
-						style="background-image: url(../images/portugal/tours-portugal-slider-3.jpg); min-width: 420px; min-height: 570px; background-repeat: no-repeat; background-size: cover; background-position: center;">
+						style="background-image: url(./images/portugal/tours-portugal-slider-3.jpg); min-width: 420px; min-height: 570px; background-repeat: no-repeat; background-size: cover; background-position: center;">
 						<p class="tours-content__text">Карпатос</p>
 					</div>
 					<div class="tours-content"
-						style="background-image: url(../images/portugal/tours-portugal-slider-4.jpg); min-width: 420px; min-height: 570px; background-repeat: no-repeat; background-size: cover; background-position: center;">
+						style="background-image: url(./images/portugal/tours-portugal-slider-4.jpg); min-width: 420px; min-height: 570px; background-repeat: no-repeat; background-size: cover; background-position: center;">
 						<p class="tours-content__text">Акрополь</p>
 					</div>
 				</div>
@@ -194,27 +194,27 @@
 				<h4 class="expenses-content__title expenses-content__title-tour">Дополнительные расходы (по желанию)</h4>
 				<div class="expenses-content__box expenses-content__box-tour">
 					<div class="description-price__grown description-price__grown-expenses"
-						style="background-image: url('../images/tour-price.png'); background-repeat: no-repeat;">
+						style="background-image: url('./images/tour-price.png'); background-repeat: no-repeat;">
 						<h4 class="description-price description-price__tour">40$</h4>
 						<p class="description-text__price description-text__price-tour">Поездна на Велике</p>
 					</div>
 					<div class="description-price__grown description-price__grown-expenses"
-						style="background-image: url('../images/tour-price.png'); background-repeat: no-repeat;">
+						style="background-image: url('./images/tour-price.png'); background-repeat: no-repeat;">
 						<h4 class="description-price description-price__tour">80$</h4>
 						<p class="description-text__price description-text__price-tour">Поездка на Самокате</p>
 					</div>
 					<div class="description-price__grown description-price__grown-expenses"
-						style="background-image: url('../images/tour-price.png'); background-repeat: no-repeat;">
+						style="background-image: url('./images/tour-price.png'); background-repeat: no-repeat;">
 						<h4 class="description-price description-price__tour">60$</h4>
 						<p class="description-text__price description-text__price-tour">Поездка на Верблюде</p>
 					</div>
 					<div class="description-price__grown description-price__grown-expenses"
-						style="background-image: url('../images/tour-price.png'); background-repeat: no-repeat;">
+						style="background-image: url('./images/tour-price.png'); background-repeat: no-repeat;">
 						<h4 class="description-price description-price__tour">100$</h4>
 						<p class="description-text__price description-text__price-tour">Поездка на Внедорожнике</p>
 					</div>
 					<div class="description-price__grown description-price__grown-expenses description-text__text-tour"
-						style="background-image: url('../images/tours-price.png'); background-repeat: no-repeat;">
+						style="background-image: url('./images/tours-price.png'); background-repeat: no-repeat;">
 						<h4 class="description-price description-price__tour"></h4>
 						<p class="description-text__price description-text__price-lunch">Обед</p>
 					</div>
@@ -243,11 +243,11 @@
 				</div>
 				<div class="info-content__aside">
 					<div class="info-content__aside-box"
-						style="background-image: url('../images/info-bg.jpg'); border-radius: 30px; background-repeat: no-repeat; background-position: top;">
+						style="background-image: url('./images/info-bg.jpg'); border-radius: 30px; background-repeat: no-repeat; background-position: top;">
 						<p class="info-content__aside-text">С 30 декабря 2021 года для въезда в Абу‑Даби вакцинированные резиденты и посетители должны иметь Green Pass в приложении Al Hosn. .</p>
 					</div>
 					<div class="info-content__aside-box"
-						style="background-image: url('../images/info-bg.jpg'); border-radius: 30px; background-repeat: no-repeat; background-position: top;">
+						style="background-image: url('./images/info-bg.jpg'); border-radius: 30px; background-repeat: no-repeat; background-position: top;">
 						<p class="info-content__aside-text">Пассажиры, следующие в Дубай из всех стран (в том числе ССАГПЗ), должны иметь справку об отрицательном результате теста ОТ‑ПЦР на COVID‑19, выполненного не ранее чем за 72 часа до вылета.</p>
 					</div>
 				</div>
@@ -275,11 +275,11 @@
 				</div>
 				<div class="info-content__aside">
 					<div class="info-content__aside-box"
-						style="background-image: url('../images/info-bg.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
+						style="background-image: url('./images/info-bg.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
 						<p class="info-content__aside-text">Каждый турист из Украины, планирующий въезд в ЕС, будет обязан раз в три года проходить онлайн-авторизацию – заполнять ETIAS-анкету (без необходимости обращаться в консульство, визовый центр или к любому другому посреднику).</p>
 					</div>
 					<div class="info-content__aside-box"
-						style="background-image: url('../images/info-bg.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
+						style="background-image: url('./images/info-bg.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
 						<p class="info-content__aside-text">Цель системы – проводить автоматическую проверку того, нет ли документа человека, путешествующего по безвизовому режиму, в списках разыскиваемых лиц или тех, кому запрещен или ограничен въезд в ЕС.</p>
 					</div>
 				</div>
@@ -299,33 +299,33 @@
 		<div class="gallery__content-inner">
 			<div class="gallery__content">
 				<div class="gallery__box gallery__box-left">
-					<img src="../images/portugal/portugal-gallery-1.jpg" alt="photo"
+					<img src="./images/portugal/portugal-gallery-1.jpg" alt="photo"
 						style="max-width: 520px; max-height: 330px; background-position: right; background-size: cover; border-radius: 10px"
 						class="gallery__box-img gallery__box-width">
 					<div class="gallery__box-iner">
-						<img src="../images/portugal/portugal-gallery-2.jpg" alt="photo"
+						<img src="./images/portugal/portugal-gallery-2.jpg" alt="photo"
 							style="width: 275px; max-height: 140px; border-radius: 10px"
 							class="gallery__box-img gallery__box-narrow">
 						<div class="gallery__box-images">
-							<img src="../images/portugal/portugal-gallery-3.jpg" alt="photo"
+							<img src="./images/portugal/portugal-gallery-3.jpg" alt="photo"
 								style="max-width: 268px; max-height: 140px; margin-left: 10px; border-radius: 10px"
 								class="gallery__box-img gallery__box-small">
 						</div>
 					</div>
 				</div>
 				<div class="gallery__box ">
-					<img src="../images/portugal/portugal-gallery-5.jpg" alt="photo" class="gallery__box-img gallery__box-height"
+					<img src="./images/portugal/portugal-gallery-5.jpg" alt="photo" class="gallery__box-img gallery__box-height"
 						style="height: 478px; border-radius: 10px; margin: 0 15px;">
 				</div>
 				<div class="gallery__box gallery__box-left">
 					<div class="gallery__box ">
-						<img src="../images/portugal/portugal-gallery-6.jpg" alt="photo" class="gallery__box-img"
+						<img src="./images/portugal/portugal-gallery-6.jpg" alt="photo" class="gallery__box-img"
 							style="max-width: 520px; max-height: 330px; background-position: center top; background-size: cover; border-radius: 10px">
 						<div class="gallery__box-wrap">
-							<img src="../images/austria/austria-gallery-7.jpg" alt="photo" class="gallery__box-img gallery__box-dubai"
+							<img src="./images/austria/austria-gallery-7.jpg" alt="photo" class="gallery__box-img gallery__box-dubai"
 								style="max-width: 237px; max-height: 140px; border-radius: 10px">
 							<div class="gallery__box ">
-								<img src="../images/portugal/portugal-gallery-8.jpg" alt="photo" class="gallery__box-img gallery__pic-width"
+								<img src="./images/portugal/portugal-gallery-8.jpg" alt="photo" class="gallery__box-img gallery__pic-width"
 									style="width: 257px; max-height: 140px; margin-left: 10px; border-radius: 10px">
 							</div>
 						</div>
@@ -351,7 +351,7 @@
 			<div class="slider-review__inner">
 				<div class="slider-review__content">
 					<div class="slider__review-img">
-						<img class="review-img" src="../images/review-dubai-1.jpg" alt="">
+						<img class="review-img" src="./images/review-dubai-1.jpg" alt="">
 					</div>
 					<div class="slider__review-title">
 						<h6 class="slider__review-caption">Ивана Иванова, 22 лет</h6>
@@ -364,7 +364,7 @@
 			<div class="slider-review__inner">
 				<div class="slider-review__content">
 					<div class="slider__review-img">
-						<img class="review-img" src="../images/review-dubai-2.jpg" alt="">
+						<img class="review-img" src="./images/review-dubai-2.jpg" alt="">
 					</div>
 					<div class="slider__review-title">
 						<h6 class="slider__review-caption">Мартин Кук, 28 лет</h6>
@@ -377,7 +377,7 @@
 			<div class="slider-review__inner">
 				<div class="slider-review__content">
 					<div class="slider__review-img">
-						<img class="review-img" src="../images/review-dubai-3.jpg" alt="">
+						<img class="review-img" src="./images/review-dubai-3.jpg" alt="">
 					</div>
 					<div class="slider__review-title">
 						<h6 class="slider__review-caption">Лилия Городецкая, 20 лет</h6>
@@ -390,7 +390,7 @@
 			<div class="slider-review__inner">
 				<div class="slider-review__content">
 					<div class="slider__review-img">
-						<img class="review-img" src="../images/review4.jpg" alt="">
+						<img class="review-img" src="./images/review4.jpg" alt="">
 					</div>
 					<div class="slider__review-title">
 						<h6 class="slider__review-caption">Остап Лагуна, 25 лет</h6>
@@ -403,7 +403,7 @@
 			<div class="slider-review__inner">
 				<div class="slider-review__content">
 					<div class="slider__review-img">
-						<img class="review-img" src="../images/review5.jpg" alt="">
+						<img class="review-img" src="./images/review5.jpg" alt="">
 					</div>
 					<div class="slider__review-title">
 						<h6 class="slider__review-caption">Костя Барберов, 22 года</h6>
@@ -416,7 +416,7 @@
 			<div class="slider-review__inner">
 				<div class="slider-review__content">
 					<div class="slider__review-img">
-						<img class="review-img" src="../images/review6.jpg" alt="">
+						<img class="review-img" src="./images/review6.jpg" alt="">
 					</div>
 					<div class="slider__review-title">
 						<h6 class="slider__review-caption">Борис Давидов, 24 года</h6>
@@ -429,7 +429,7 @@
 			<div class="slider-review__inner">
 				<div class="slider-review__content">
 					<div class="slider__review-img">
-						<img class="review-img" src="../images/review7.jpg" alt="">
+						<img class="review-img" src="./images/review7.jpg" alt="">
 					</div>
 					<div class="slider__review-title">
 						<h6 class="slider__review-caption">Катя Мамонтова, 29 лет</h6>
@@ -443,7 +443,7 @@
 			<div class="slider-review__inner">
 				<div class="slider-review__content">
 					<div class="slider__review-img">
-						<img class="review-img" src="../images/review8.jpg" alt="">
+						<img class="review-img" src="./images/review8.jpg" alt="">
 					</div>
 					<div class="slider__review-title">
 						<h6 class="slider__review-caption">Лев Григорич, 27 лет</h6>
@@ -459,7 +459,7 @@
 		<section class="book-tour">
 				<div class="book-tour__inner">
 					<div class="book-tour__box">
-						<img src="../images/portugal/portugal-tour-bg.jpg" alt="" class="book-tour__box-img">
+						<img src="./images/portugal/portugal-tour-bg.jpg" alt="" class="book-tour__box-img">
 					</div>
 					<div class="container">
 					<div class="book-tour__container">
@@ -490,7 +490,7 @@
 			<div class="container">
 				<div class="footer__content footer__content-tours ">
 					<div class="footer-logo">
-						<img class="footer-logo__img" src="../images/footer-logo.png" alt="">
+						<img class="footer-logo__img" src="./images/footer-logo.png" alt="">
 					</div>
 					<div class="footer-menu">
 						<nav class="footer-menu__inner">
@@ -512,11 +512,11 @@
 						</div>
 						<div class="footer-social__network">
 							<a href="#" class="social__network">
-								<img src="../images/vkontakte-icon.svg" alt="" class="social__network"></a>
+								<img src="./images/vkontakte-icon.svg" alt="" class="social__network"></a>
 							<a href="#" class="social__network">
-								<img src="../images/instagram-icon.svg" alt="" class="social__network"></a>
+								<img src="./images/instagram-icon.svg" alt="" class="social__network"></a>
 							<a href="#" class="social__network">
-								<img src="../images/facebook-icon.svg" alt="" class="social__network"></a>
+								<img src="./images/facebook-icon.svg" alt="" class="social__network"></a>
 						</div>
 					</div>
 				</div>
